# qt5-cmake-template

./: CMakeLists.txt  README.md
include/ui/: main_window.h
src/: main.cc
src/ui/: main_window.cc
ui/: mainwindow.ui
